2007-07-02  Dan Williams  <dcbw@redhat.com>

	Suppress activation of wireless devices until 5 seconds after NM starts,
	to allow time for wired devices to determine their link state before starting
	mesh association.

2007-07-02  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-mesh-olpc.c
		- (channel_failure_handler): handle failure of p2p mesh case too

2007-07-02  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-mesh-olpc.c
		- Clean up output of unhandled mesh stage error messages

2007-06-28  Dan Williams  <dcbw@redhat.com>

	Get rid of dhcdbd, based on a patch from Robert Frank.  Drive dhclient
	directly.  Big refactor to make the DHCP manager a GObject subclass with
	signals on DHCP events.

2007-06-22  Dan Williams  <dcbw@redhat.com>

	* callouts/nm-avahi-autoipd.action
	  callouts/nm-avahi-autoipd.conf
	  src/NetworkManagerDbus.c
		- org.freedesktop.NetworkManager.avahiautoipd -> org.freedesktop.nm_avahi_autoipd
			Must have a different bus name than NetworkManager, otherwise the
			security policies conflict.

2007-06-21  Dan Williams  <dcbw@redhat.com>

	Big mesh update

	- Send MeshReady and MeshDown events so that the dispatcher can start
		mesh portal functionality correctly
	- Rework the avahi-autoipd handling code to spawn avahi-autoipd with using
		a custom action script, and to listen for avahi-autoipd event signals
	- Make MPP functionality actually work
	- Add the mpp.py script that the dispatcher uses
	- Handle memory allocation failures more gracefully

2007-06-21  Dan Williams  <dcbw@redhat.com>

	* dispatcher-daemon/NetworkManagerDispatcher.c
		- Add MESH_READY and MESH_DOWN events
		- Keep a cache of interface <-> object path mappings, so that when NM
			goes away the dispatcher can still figure out what the interface
			is for the deactivated signal

2007-06-21  Dan Williams  <dcbw@redhat.com>

	* configure.in
	  callouts/Makefile.am
		- Add avahi-autoipd callouts

	* callouts/nm-avahi-autoipd.action